[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/player/Character ControllerV2.gd" type="Script" id=1]
[ext_resource path="res://Scripts/player/movement/lander.gd" type="Script" id=2]

[sub_resource type="CylinderShape" id=1]
height = 4.0

[sub_resource type="CapsuleMesh" id=2]
mid_height = 2.0

[node name="Player" type="RigidBody"]
continuous_cd = true
contact_monitor = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource( 1 )

[node name="Body" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Camera" type="Camera" parent="Head"]
current = true

[node name="lander" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="FrontFoot" type="RayCast" parent="lander"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, -1 )
enabled = true

[node name="LeftFoot" type="RayCast" parent="lander"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -1.5, 0 )
enabled = true

[node name="BackFoot" type="RayCast" parent="lander"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 1 )
enabled = true

[node name="RightFoot" type="RayCast" parent="lander"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1.5, 0 )
enabled = true
